fix: modal was not visible properly

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -34,8 +34,15 @@
     @import 'site/shortcode/payment_modal';
 
     .modal-backdrop.show {
-        opacity: 0.95;
-        background-color: #f5f5f5;
+        display: block;
+        background: #8e8e8e;
+        position: fixed;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        opacity: 1;
+        z-index: 1;
     }
 
     ul.list-group,
